--- a/module_flop/src/main/res/layout/activity_floa.xml
+++ b/module_flop/src/main/res/layout/activity_floa.xml
@@ -2,7 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#10172C">
 
 
     <Button
@@ -26,66 +27,66 @@
 
 
     <ImageView
-        android:background="@drawable/b6"
-
         android:id="@+id/flopview6"
+
         android:layout_width="50dp"
         android:layout_height="100dp"
         android:layout_marginBottom="50dp"
+        android:background="@drawable/b6"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
 
     <ImageView
-        android:background="@drawable/b5"
-
         android:id="@+id/flopview5"
+
         android:layout_width="50dp"
         android:layout_height="100dp"
         android:layout_marginBottom="50dp"
+        android:background="@drawable/b5"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
 
     <ImageView
-        android:background="@drawable/b4"
-
         android:id="@+id/flopview4"
+
         android:layout_width="50dp"
         android:layout_height="100dp"
         android:layout_marginBottom="50dp"
+        android:background="@drawable/b4"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
 
     <ImageView
-        android:background="@drawable/b3"
-
         android:id="@+id/flopview3"
+
         android:layout_width="50dp"
         android:layout_height="100dp"
         android:layout_marginBottom="50dp"
+        android:background="@drawable/b3"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
 
     <ImageView
-        android:background="@drawable/b2"
-
         android:id="@+id/flopview2"
+
         android:layout_width="50dp"
         android:layout_height="100dp"
         android:layout_marginBottom="50dp"
+        android:background="@drawable/b2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
 
     <ImageView
-        android:background="@drawable/b1"
         android:id="@+id/flopview1"
         android:layout_width="50dp"
         android:layout_height="100dp"
         android:layout_marginBottom="50dp"
+        android:background="@drawable/b1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
