--- a/module_flop/src/main/res/layout/activity_floa.xml
+++ b/module_flop/src/main/res/layout/activity_floa.xml
@@ -17,6 +17,7 @@
         app:layout_constraintRight_toRightOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:visibility="gone"
         android:id="@+id/recycleview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -90,4 +91,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
+
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
