--- a/module_flop/src/main/res/layout/activity_floa.xml
+++ b/module_flop/src/main/res/layout/activity_floa.xml
@@ -17,8 +17,8 @@
         app:layout_constraintRight_toRightOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:visibility="gone"
         android:id="@+id/recycleview"
+        android:visibility="invisible"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
