--- a/module_flop/src/main/res/layout/activity_floa.xml
+++ b/module_flop/src/main/res/layout/activity_floa.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/cc"
     android:background="#10172C">
 
 
@@ -18,7 +19,6 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycleview"
-        android:visibility="invisible"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -27,67 +27,15 @@
         app:layout_constraintTop_toTopOf="parent" />
 
 
-    <ImageView
-        android:id="@+id/flopview6"
 
+
+    <ImageView
+        android:visibility="invisible"
+        android:id="@+id/flopview6"
         android:layout_width="50dp"
         android:layout_height="100dp"
         android:layout_marginBottom="50dp"
         android:background="@drawable/b6"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
-
-    <ImageView
-        android:id="@+id/flopview5"
-
-        android:layout_width="50dp"
-        android:layout_height="100dp"
-        android:layout_marginBottom="50dp"
-        android:background="@drawable/b5"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
-
-    <ImageView
-        android:id="@+id/flopview4"
-
-        android:layout_width="50dp"
-        android:layout_height="100dp"
-        android:layout_marginBottom="50dp"
-        android:background="@drawable/b4"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
-
-    <ImageView
-        android:id="@+id/flopview3"
-
-        android:layout_width="50dp"
-        android:layout_height="100dp"
-        android:layout_marginBottom="50dp"
-        android:background="@drawable/b3"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
-
-    <ImageView
-        android:id="@+id/flopview2"
-
-        android:layout_width="50dp"
-        android:layout_height="100dp"
-        android:layout_marginBottom="50dp"
-        android:background="@drawable/b2"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
-
-    <ImageView
-        android:id="@+id/flopview1"
-        android:layout_width="50dp"
-        android:layout_height="100dp"
-        android:layout_marginBottom="50dp"
-        android:background="@drawable/b1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
