--- a/module_flop/src/main/res/layout/item_flop.xml
+++ b/module_flop/src/main/res/layout/item_flop.xml
@@ -5,7 +5,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
-    <com.example.a11699.module_flop.customview.FlopView
+    <com.example.a11699.module_flop.customview.ShellView
         android:id="@+id/flopview"
         android:layout_width="80dp"
         android:layout_height="160dp"
