--- a/module_flop/src/main/res/layout/activity_floa.xml
+++ b/module_flop/src/main/res/layout/activity_floa.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/cc"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/cc"
     android:background="#10172C">
 
 
@@ -27,19 +27,53 @@
         app:layout_constraintTop_toTopOf="parent" />
 
 
-
-
     <ImageView
-        android:visibility="invisible"
         android:id="@+id/flopview6"
         android:layout_width="50dp"
         android:layout_height="100dp"
         android:layout_marginBottom="50dp"
         android:background="@drawable/b6"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
 
+    <com.example.a11699.module_flop.customview.FlopViewGroup
+        android:id="@+id/ffffff"
+        android:layout_width="80dp"
+        android:layout_height="160dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="50dp"
+            android:layout_height="100dp">
+
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="100dp"
+                android:background="@drawable/backbg"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <ImageView
+                android:id="@+id/click"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/abc_vector_test"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="100dp"
+            android:background="@drawable/b1"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent" />
+
+
+    </com.example.a11699.module_flop.customview.FlopViewGroup>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
