--- a/app/src/main/res/layout/activity_bottom_tab.xml
+++ b/app/src/main/res/layout/activity_bottom_tab.xml
@@ -7,11 +7,11 @@
     android:layout_height="match_parent"
     tools:context=".botomtab.BottomTabActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="dsadasdsadasdsadsadasdas"
-        android:textSize="30dp"
+    <ImageView
+        android:background="@drawable/tangp"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/bottomTabLayout"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
