--- a/app/src/main/res/layout/activity_drawable.xml
+++ b/app/src/main/res/layout/activity_drawable.xml
@@ -2,15 +2,11 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent">
 
-    <View
-        android:id="@+id/button"
-        android:background="@color/colorAccent"
-        android:layout_width="64dp"
-        android:layout_height="64dp"
-        android:layout_marginStart="8dp"
-       app:layout_constraintRight_toRightOf="parent"
+    <com.example.a11699.androidxallstudy.bitmap.DrawableView
+        android:layout_width="150dp"
+        android:layout_height="200dp"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
