--- a/module_flop/src/main/res/layout/item_flop.xml
+++ b/module_flop/src/main/res/layout/item_flop.xml
@@ -2,8 +2,9 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_width="80dp"
+    android:background="#000"
+    android:layout_height="160dp">
 
     <com.example.a11699.module_flop.customview.ShellView
         android:id="@+id/flopview"
