--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -261,6 +261,11 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="微博" />
+                <Button
+                    android:id="@+id/btn_xml"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="XMl的读取和写入" />
             </LinearLayout>
         </androidx.core.widget.NestedScrollView>
 
