'修改卡牌位置展示不准的问题，增加自定义Activity实现悬浮窗效果'

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,6 @@
         android:layout_height="match_parent"
         tools:context=".MainActivity">
 
-
         <com.example.a11699.androidxallstudy.myseekbar.IndicatorSeekBar
             android:id="@+id/beauty_item_seekbar"
             android:layout_width="match_parent"
@@ -266,9 +265,24 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="XMl的读取和写入" />
+
+                <Button
+                    android:id="@+id/btn_quickclick"
+                    android:layout_width="match_parent"
+                    android:text="面向切面实现 给button添加防快速点击功能"
+                    android:layout_height="wrap_content"/>
             </LinearLayout>
         </androidx.core.widget.NestedScrollView>
 
+        <CheckBox
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:id="@+id/chkShowFloatWindow"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:text="显示悬浮窗"
+            />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
