--- a/comp_netstudyt/src/main/res/layout/activity_netstudy.xml
+++ b/comp_netstudyt/src/main/res/layout/activity_netstudy.xml
@@ -30,5 +30,18 @@
         android:text="谈起一个弹窗，更新数据"
         app:layout_constraintTop_toBottomOf="@+id/tv_test" />
 
+    <Button
+        android:layout_width="match_parent"
+        android:text="获取数据"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:id="@+id/btn_getdata"
+        android:layout_height="wrap_content"/>
+
+    <TextView
+        android:id="@+id/tttt"
+        app:layout_constraintBottom_toTopOf="@+id/btn_getdata"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
