--- a/app/src/main/res/layout/activity_peimission_study.xml
+++ b/app/src/main/res/layout/activity_peimission_study.xml
@@ -26,13 +26,16 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:text="dsadasdasdasdasasdasd"
+    <com.example.a11699.androidxallstudy.permissionstudy.MarQueeTextView
+        android:id="@+id/tvvv"
+        android:text="dsadasdsadasddsadasdasdasdasdsadasdasdas"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:maxWidth="100dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:singleLine="true"
+        android:marqueeRepeatLimit="marquee_forever"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
 </merge>
