--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
             android:layout_marginBottom="25dp"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <androidx.core.widget.NestedScrollView
+        <com.example.a11699.comp_customview.topview.TopViewScaleScrollView
             android:id="@+id/nn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -30,6 +30,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical">
+
+                <LinearLayout
+                    android:tag="topview"
+
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp" />
 
                 <Button
                     android:id="@+id/btn_permission"
@@ -255,11 +261,13 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="网络请求封装" />
+
                 <Button
                     android:id="@+id/btn_weibo"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="微博" />
+
                 <Button
                     android:id="@+id/btn_xml"
                     android:layout_width="match_parent"
@@ -269,37 +277,38 @@
                 <Button
                     android:id="@+id/btn_quickclick"
                     android:layout_width="match_parent"
-                    android:text="面向切面实现 给button添加防快速点击功能"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    android:text="面向切面实现 给button添加防快速点击功能" />
 
 
                 <Button
                     android:id="@+id/btn_timepick"
                     android:layout_width="match_parent"
-                    android:text="时间选择器"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    android:text="时间选择器" />
+
                 <Button
                     android:id="@+id/btn_meinformation"
                     android:layout_width="match_parent"
-                    android:text="个人信息界面"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    android:text="个人信息界面" />
+
                 <Button
                     android:id="@+id/btn_inanmal"
                     android:layout_width="match_parent"
-                    android:text="lucky用户进场动画"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    android:text="lucky用户进场动画" />
             </LinearLayout>
-        </androidx.core.widget.NestedScrollView>
+        </com.example.a11699.comp_customview.topview.TopViewScaleScrollView>
 
         <CheckBox
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
             android:id="@+id/chkShowFloatWindow"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:text="显示悬浮窗"
-            />
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
