--- a/app/src/main/res/layout/activity_barrage.xml
+++ b/app/src/main/res/layout/activity_barrage.xml
@@ -7,6 +7,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/pair_img_bg"
     tools:context=".cunstombarrage.BarrageActivity">
+
     <ImageView
         android:id="@+id/img_animal"
         android:layout_width="168dp"
@@ -17,16 +18,24 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@+id/img" />
 
+
+
+<!--    <com.example.a11699.comp_customview.pentagonal.HexagonImageView
+        android:id="@+id/dsdsdsdsds"
+        android:layout_width="160dp"
+        android:layout_height="160dp"
+        android:layout_centerInParent="true"
+        app:civ_border_width="2dp" />-->
+
+
     <ImageView
         android:id="@+id/img"
-        android:layout_width="118dp"
-        android:layout_height="118dp"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         android:layout_marginTop="85dp"
-        android:background="@drawable/pair_img_searching"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
 
     <Button
         android:id="@+id/btn_message"
@@ -51,8 +60,8 @@
         app:layout_constraintRight_toRightOf="parent"></View>
 
     <Button
-        android:layout_width="152dp"
         android:id="@+id/btn_clickliao"
+        android:layout_width="152dp"
         android:layout_height="36dp"
         android:layout_marginLeft="7dp"
         android:layout_marginBottom="34dp"
