--- a/app/src/main/res/layout/activity_liubianxing.xml
+++ b/app/src/main/res/layout/activity_liubianxing.xml
@@ -18,12 +18,27 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_marginTop="100dp"
+        app:isFill="false"
         app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/glideurl"
+        app:layout_constraintTop_toTopOf="parent"
+        app:loadNetImg="false"
+        app:sixStroke="3dp"
+        app:sixAngle="3dp"
+        app:sixXColor="#ff32" />
+
+    <com.example.a11699.comp_customview.pentagonal.PentagonalView
+        android:id="@+id/glideurl"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="100dp"
+        android:src="@drawable/avatar_rengwuxian"
+        app:layout_constraintLeft_toRightOf="@+id/pentview"
         app:layout_constraintRight_toLeftOf="@+id/hen"
         app:layout_constraintTop_toTopOf="parent"
         app:sixAngle="3dp"
-        app:sixStroke="3dp"
-        android:src="@drawable/avatar_rengwuxian"
+        app:isFill="true"
+        app:loadNetImg="true"
         app:sixXColor="#ff32" />
 
     <com.example.a11699.comp_customview.pentagonal.HexagonImageView
@@ -31,7 +46,7 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:src="@drawable/avatar_rengwuxian"
-        app:layout_constraintLeft_toRightOf="@+id/pentview"
+        app:layout_constraintLeft_toRightOf="@+id/glideurl"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@+id/pentview" />
 
