--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -333,6 +333,25 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="六边形" />
+
+                <Button
+                    android:id="@+id/btn_recycleview"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="recycleview学习" />
+
+                <Button
+                    android:id="@+id/btn_workmanager"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="WorManager写一个后台任务" />
+
+
+                <Button
+                    android:id="@+id/btn_tiantian"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="天天项目" />
             </LinearLayout>
         </com.example.a11699.comp_customview.topview.TopViewScaleScrollView>
 
